Added password reset

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
           <%= link_to 'Home', root_path, class: 'nav-link' %>
         </li>
@@ -13,6 +13,27 @@
           <%= link_to 'About', about_path, class: 'nav-link' %>
         </li>
       </ul>
+
+      <div class="d-flex" role="search">
+        <ul class="navbar-nav">
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to 'Edit Password', edit_password_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= button_to 'Log out', session_path, class: 'nav-link', method: :delete %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to 'Sign Up', new_registration_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Login', new_session_path, class: 'nav-link' %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+
     </div>
   </div>
 </nav>
